# Simple-Menu-Data-Structure-for-CPP

./: .gitignore  CMakeLists.txt  main.cpp
src/: Menu.cpp  Menu.hpp
